data/usersCode/tanmaypardeshi/questionNone/error.txt
data/usersCode/tanmaypardeshi/questionNone/code1.c:1:1: error: unknown type name ‘Hello’
    1 | Hello World
      | ^~~~~
data/usersCode/tanmaypardeshi/questionNone/code1.c:1:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
